Added accessibility link

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
             </p>
               <div><b>&#69<span class="yalpsid">mi</span><span>mai</span>&#108:</b> 
 	      <span>rc</span>chen<span class="yalpsid">hr</span><span class="yalpsid">vap</span><span>&#x40</span><span>mi</span><span>t.e</span><span>du</span></div>
+	    <br>
+	    <p> <a href="http://accessibility.mit.edu">Accessibility</a>
+	    </p>
         </div>
     </div>
 </body>
