--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>Two-Column Layout</title>
+    <title>Ryan C. Chen</title>
     <style>
         body {
             display: flex;
