--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div id="corank1_ASW" style="display: none">
       <p class="hanging-indent">
       <span class="depth-2-indent">
-        We prove the arithmetic Siegel&ndash;Weil formula in co-rank 1, for Kudla&ndash;Rapoport
+        We prove the arithmetic Siegel&ndash;Weil formula in co-rank $1$, for Kudla&ndash;Rapoport
         special cycles on exotic smooth integral models of unitary Shimura varieties
         of arbitrarily large even arithmetic dimension. We also propose a construction
         for arithmetic special cycle classes associated to possibly singular matrices
