--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <a href="papers/corank1_ASW.pdf"><strong>Co-rank 1 Arithmetic Siegel&ndash;Weil</strong></a>
         <br>
         <span class="depth-2">
-          Preliminary version (2024), pp. 1&ndash;223.
+          Preliminary version (Feb. 2024), pp. 1&ndash;223.
         </span>
         <br>
         <span class="depth-2">
