--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   });
   </script>
   <script src="js/toggleDisplay.js"></script>
-  <script src="js/includeHTML.js"></script>
+  <script src="js/lastModified.js"></script>
 </head>
 <body>
   <div class="container">
