--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
       <p>I am a PhD student in the math department at 
         <a href="https://math.mit.edu/">MIT</a>. My advisor is 
         <a href="https://math.mit.edu/~wz2113/">Wei Zhang</a>.
-        <br>I am interested in number theory and arithmetic geometry. I have been working on topics in Kudla's program.
+        <br>I am interested in number theory and arithmetic geometry. I have been working on topics
+            surrounding special cycles on Shimura varieties, particularly in Kudla's program.
       </p>
       <div>
         <b>&#69<span class="yalpsid">mi</span><span>mai</span>&#108:</b> 
