--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
       <p>I am a PhD student in the math department at 
         <a href="https://math.mit.edu/">MIT</a>. My advisor is 
         <a href="https://math.mit.edu/~wz2113/">Wei Zhang</a>.
+        I have been supported by an NSF graduate research fellowship.
+        <br>
         <br>I am interested in number theory and arithmetic geometry. I have been working on topics
             concerning special cycles on Shimura varieties, particularly in Kudla's program.
       </p>
