--- a/index.html
+++ b/index.html
@@ -61,35 +61,145 @@
       </p>
 <!-- -------------------------------------- -->  
       <p class="hanging-indent">
-        <a href="papers/corank1_ASW.pdf"><strong>Co-rank 1 Arithmetic Siegel&ndash;Weil</strong></a>
+        <a href="papers/corank1_ASW_IV.pdf"><strong>Co-rank 1 Arithmetic Siegel&ndash;Weil IV: Analytic local-to-global</strong></a>
         <br>
         <span class="depth-2">
-          Preliminary version (Feb. 2024), pp. 1&ndash;223.
+          Preprint, pp. 1&ndash;69.
         </span>
         <br>
         <span class="depth-2">
-          [<a href="javascript:;" onclick="toggleDisplay('corank1_ASW');">abstract</a>]
+          [<a href="javascript:;" onclick="toggleDisplay('corank1_ASW_IV');">abstract</a>]
+          [<a href="https://arxiv.org/abs/2405.01429">arXiv</a> (2024)]
         </span>
       </p>
 
-      <div id="corank1_ASW" style="display: none">
+      <div id="corank1_ASW_IV" style="display: none">
       <p class="hanging-indent">
       <span class="depth-2-indent">
-        We prove the arithmetic Siegel&ndash;Weil formula in co-rank $1$, for Kudla&ndash;Rapoport
-        special cycles on exotic smooth integral models of unitary Shimura varieties
-        of arbitrarily large even arithmetic dimension. We also propose a construction
-        for arithmetic special cycle classes associated to possibly singular matrices
-        of arbitrary co-rank.
-        Our arithmetic Siegel&ndash;Weil formula implies that degrees of Kudla&ndash;Rapoport arithmetic
-        special $1$-cycles are encoded in the first derivatives of unitary
-        Eisenstein series Fourier coefficients.
+        This is the fourth in a sequence of four papers,
+        where we prove the arithmetic Siegel&ndash;Weil formula in co-rank $1$
+        for Kudla&ndash;Rapoport special cycles on exotic smooth integral models
+        of unitary Shimura varieties of arbitrarily large even arithmetic dimension. 
+        Our arithmetic Siegel&ndash;Weil formula implies that degrees of Kudla&ndash;Rapoport
+        arithmetic special $1$-cycles are encoded in the first derivatives of
+        unitary Eisenstein series Fourier coefficients.
       </span>
       <span class="depth-2-indent">
-        The key input is a new limiting method at all places. On the analytic side,
-        the limit relates local Whittaker functions on different groups.
-        On the geometric side at nonsplit non-Archimedean places, the
-        limit relates degrees of $0$-cycles on Rapoport&ndash;Zink spaces
-        and local contributions to heights of $1$-cycles in mixed characteristic. 
+        In this paper, we pin down precise normalizations for some $U(m,m)$
+        Siegel Eisenstein series, give local Siegel&ndash;Weil special value
+        formulas with explicit constants, and record a geometric Siegel&ndash;Weil
+        result for degrees of complex $0$-cycles. Using this, we complete the proof of
+        our arithmetic Siegel&ndash;Weil results by patching together the
+        local main theorems from our companion papers.
+      </span>
+      </p>
+      </div>
+<!-- -------------------------------------- -->  
+      <p class="hanging-indent">
+        <a href="papers/corank1_ASW_III.pdf"><strong>Co-rank 1 Arithmetic Siegel&ndash;Weil III: Geometric local-to-global</strong></a>
+        <br>
+        <span class="depth-2">
+          Preprint, pp. 1&ndash;68.
+        </span>
+        <br>
+        <span class="depth-2">
+          [<a href="javascript:;" onclick="toggleDisplay('corank1_ASW_III');">abstract</a>]
+          [<a href="https://arxiv.org/abs/2405.01428">arXiv</a> (2024)]
+        </span>
+      </p>
+
+      <div id="corank1_ASW_III" style="display: none">
+      <p class="hanging-indent">
+      <span class="depth-2-indent">
+        This is the third in a sequence of four papers,
+        where we prove the arithmetic Siegel&ndash;Weil formula
+        in co-rank $1$ for Kudla&ndash;Rapoport special cycles
+        on exotic smooth integral models of unitary Shimura varieties
+        of arbitrarily large even arithmetic dimension. 
+        Our arithmetic Siegel&ndash;Weil formula implies that degrees
+        of Kudla&ndash;Rapoport arithmetic special $1$-cycles are
+        encoded in the first derivatives of unitary Eisenstein
+        series Fourier coefficients.
+      </span>
+      <span class="depth-2-indent">
+        In this paper, we finish the reduction process from
+        global arithmetic intersection numbers for special cycles
+        to the local geometric quantities in our companion papers. 
+      </span>
+      <span class="depth-2-indent">
+      Building on our previous companion papers, we also propose
+      a construction for arithmetic special cycle classes associated
+      to possibly singular matrices of arbitrary co-rank.  
+      </span>
+      </p>
+      </div>
+<!-- -------------------------------------- -->  
+      <p class="hanging-indent">
+        <a href="papers/corank1_ASW_II.pdf"><strong>Co-rank 1 Arithmetic Siegel&ndash;Weil II: Local Archimedean</strong></a>
+        <br>
+        <span class="depth-2">
+          Preprint, pp. 1&ndash;29.
+        </span>
+        <br>
+        <span class="depth-2">
+          [<a href="javascript:;" onclick="toggleDisplay('corank1_ASW_II');">abstract</a>]
+          [<a href="https://arxiv.org/abs/2405.01427">arXiv</a> (2024)]
+        </span>
+      </p>
+
+      <div id="corank1_ASW_II" style="display: none">
+      <p class="hanging-indent">
+      <span class="depth-2-indent">
+        This is the second in a sequence of four papers, where we prove the arithmetic
+        Siegel&ndash;Weil formula in co-rank $1$ for Kudla&ndash;Rapoport special cycles
+        on exotic smooth integral models of unitary Shimura varieties of arbitrarily
+        large even arithmetic dimension. Our arithmetic Siegel&ndash;Weil formula implies
+        that degrees of Kudla&ndash;Rapoport arithmetic special $1$-cycles
+        are encoded in the first derivatives of unitary Eisenstein series Fourier coefficients.
+      </span>
+      <span class="depth-2-indent">
+        In this paper, we formulate and prove the key Archimedean local theorem. 
+        In the case of purely Archimedean intersection numbers, we also prove
+        an Archimedean local arithmetic Siegel&ndash;Weil formula, relating Green currents
+        of arbitrary degree and off-central derivatives of local Whittaker functions.
+        The crucial input is a new limiting method, which is structurally parallel
+        to our strategy at non-Archimedean places.
+      </span>
+      </p>
+      </div>
+<!-- -------------------------------------- -->  
+      <p class="hanging-indent">
+        <a href="papers/corank1_ASW_I.pdf"><strong>Co-rank 1 Arithmetic Siegel&ndash;Weil I: Local non-Archimedean</strong></a>
+        <br>
+        <span class="depth-2">
+          Preprint, pp. 1&ndash;111.
+        </span>
+        <br>
+        <span class="depth-2">
+          [<a href="javascript:;" onclick="toggleDisplay('corank1_ASW_I');">abstract</a>]
+          [<a href="https://arxiv.org/abs/2405.01426">arXiv</a> (2024)]
+          [<a href="papers/corank1_ASW.pdf">combined I&ndash;IV</a>]
+        </span>
+      </p>
+
+      <div id="corank1_ASW_I" style="display: none">
+      <p class="hanging-indent">
+      <span class="depth-2-indent">
+        This is the first in a sequence of four papers, where we prove the 
+        arithmetic Siegel&ndash;Weil formula in co-rank $1$ for Kudla&ndash;Rapoport
+        special cycles on exotic smooth integral models of unitary Shimura varieties
+        of arbitrarily large even arithmetic dimension. Our arithmetic Siegel&ndash;Weil
+        formula implies that degrees of Kudla&ndash;Rapoport arithmetic special $1$-cycles
+        are encoded in the first derivatives of unitary Eisenstein series Fourier coefficients.
+      </span>
+      <span class="depth-2-indent">
+        The crucial input is a new local limiting method at all places. 
+        In this paper, we formulate and prove the key local theorems at all
+        non-Archimedean places. On the analytic side, the limit relates
+        local Whittaker functions on different groups. On the geometric side
+        at nonsplit non-Archimedean places, the limit relates degrees of $0$-cycles
+        on Rapoport&ndash;Zink spaces and local contributions to heights of
+        $1$-cycles in mixed characteristic.
       </span>
       </p>
       </div>
@@ -309,7 +419,7 @@
       <br>
       <p> 
         <small>
-          Last updated: March 2024.
+          Last updated: May 2024.
         </small>
       </p>
       <p> 
