--- a/index.html
+++ b/index.html
@@ -64,12 +64,14 @@
         <a href="papers/corank1_ASW_IV.pdf"><strong>Co-rank 1 Arithmetic Siegel&ndash;Weil IV: Analytic local-to-global</strong></a>
         <br>
         <span class="depth-2">
-          Preprint, pp. 1&ndash;69.
+          <a href="https://arxiv.org/abs/2405.01429">Preprint</a>, pp. 1&ndash;69.
         </span>
         <br>
         <span class="depth-2">
-          [<a href="javascript:;" onclick="toggleDisplay('corank1_ASW_IV');">abstract</a>]
-          [<a href="https://arxiv.org/abs/2405.01429">arXiv</a> (2024)]
+          <small>
+            [<a href="javascript:;" class="no-decoration" onclick="toggleDisplay('corank1_ASW_IV');">abstract</a>]
+            [<a href="https://arxiv.org/abs/2405.01429" class="no-decoration">arXiv</a> (2024)]
+          </small>
         </span>
       </p>
 
@@ -99,12 +101,14 @@
         <a href="papers/corank1_ASW_III.pdf"><strong>Co-rank 1 Arithmetic Siegel&ndash;Weil III: Geometric local-to-global</strong></a>
         <br>
         <span class="depth-2">
-          Preprint, pp. 1&ndash;68.
+          <a href="https://arxiv.org/abs/2405.01428">Preprint</a>, pp. 1&ndash;68.
         </span>
         <br>
         <span class="depth-2">
-          [<a href="javascript:;" onclick="toggleDisplay('corank1_ASW_III');">abstract</a>]
-          [<a href="https://arxiv.org/abs/2405.01428">arXiv</a> (2024)]
+          <small>
+            [<a href="javascript:;" class="no-decoration" onclick="toggleDisplay('corank1_ASW_III');">abstract</a>]
+            [<a href="https://arxiv.org/abs/2405.01428" class="no-decoration">arXiv</a> (2024)]
+          </small>
         </span>
       </p>
 
@@ -138,12 +142,14 @@
         <a href="papers/corank1_ASW_II.pdf"><strong>Co-rank 1 Arithmetic Siegel&ndash;Weil II: Local Archimedean</strong></a>
         <br>
         <span class="depth-2">
-          Preprint, pp. 1&ndash;29.
+          <a href="https://arxiv.org/abs/2405.01427">Preprint</a>, pp. 1&ndash;29.
         </span>
         <br>
         <span class="depth-2">
-          [<a href="javascript:;" onclick="toggleDisplay('corank1_ASW_II');">abstract</a>]
-          [<a href="https://arxiv.org/abs/2405.01427">arXiv</a> (2024)]
+          <small>
+            [<a href="javascript:;" class="no-decoration" onclick="toggleDisplay('corank1_ASW_II');">abstract</a>]
+            [<a href="https://arxiv.org/abs/2405.01427" class="no-decoration">arXiv</a> (2024)]
+          </small>
         </span>
       </p>
 
@@ -172,13 +178,15 @@
         <a href="papers/corank1_ASW_I.pdf"><strong>Co-rank 1 Arithmetic Siegel&ndash;Weil I: Local non-Archimedean</strong></a>
         <br>
         <span class="depth-2">
-          Preprint, pp. 1&ndash;111.
+          <a href="https://arxiv.org/abs/2405.01426">Preprint</a>, pp. 1&ndash;111.
         </span>
         <br>
         <span class="depth-2">
-          [<a href="javascript:;" onclick="toggleDisplay('corank1_ASW_I');">abstract</a>]
-          [<a href="https://arxiv.org/abs/2405.01426">arXiv</a> (2024)]
-          [<a href="papers/corank1_ASW.pdf">combined I&ndash;IV</a>]
+          <small>
+            [<a href="javascript:;" class="no-decoration" onclick="toggleDisplay('corank1_ASW_I');">abstract</a>]
+            [<a href="https://arxiv.org/abs/2405.01426" class="no-decoration">arXiv</a> (2024)]
+            [<a href="papers/corank1_ASW.pdf">combined I&ndash;IV</a>]
+          </small>
         </span>
       </p>
 
@@ -219,13 +227,16 @@
         </span>
         <br>
         <span class="depth-2">
-          <em>Experimental Mathematics</em>, vol. 32 no. 1 (2023), pp. 33&ndash;53.
+          <em>
+            <a href="https://doi.org/10.1080/10586458.2020.1753598">Experimental Mathematics</a>
+          </em>, vol. 32 no. 1 (2023), pp. 33&ndash;53.
         </span>
         <br>
 	<span class="depth-2">
-          [<a href="javascript:;" onclick="toggleDisplay('CKL19');">abstract</a>]
-          [<a href="https://arxiv.org/abs/1901.07386">arXiv</a> (2019)]
-          [<a href="https://doi.org/10.1080/10586458.2020.1753598">journal</a>]          
+          <small>
+            [<a href="javascript:;" class="no-decoration" onclick="toggleDisplay('CKL19');">abstract</a>]
+            [<a href="https://arxiv.org/abs/1901.07386" class="no-decoration">arXiv</a> (2019)]
+          </small>
         </span>
       </p>
 
@@ -253,13 +264,17 @@
         </span>
         <br>
         <span class="depth-2">
-          <em>Symmetry, Integrability, and Geometry: Methods and Applications (SIGMA)</em>, vol. 15 (2019), pp. 1&ndash;35.
+          <em>
+            <a href="https://doi.org/10.3842/SIGMA.2019.033">
+              Symmetry, Integrability, and Geometry: Methods and Applications (SIGMA)</a>
+          </em>, vol. 15 (2019), pp. 1&ndash;35.
         </span>
         <br>
 	<span class="depth-2">
-          [<a href="javascript:;" onclick="toggleDisplay('CMT18');">abstract</a>]
-          [<a href="https://arxiv.org/abs/1809.02913">arXiv</a> (2018)]
-          [<a href="https://doi.org/10.3842/SIGMA.2019.033">journal</a>]          
+          <small>
+            [<a href="javascript:;" class="no-decoration" onclick="toggleDisplay('CMT18');">abstract</a>]
+            [<a href="https://arxiv.org/abs/1809.02913" class="no-decoration">arXiv</a> (2018)]          
+          </small>
         </span>
       </p>
 
@@ -301,13 +316,16 @@
         </span>
         <br>
         <span class="depth-2">
-          <em>Experimental Mathematics</em>, vol. 32 no. 3 (2023), pp. 431&ndash;456.
+          <em>
+            <a href="https://doi.org/10.1080/10586458.2021.1980453">Experimental Mathematics</a>
+          </em>, vol. 32 no. 3 (2023), pp. 431&ndash;456.
         </span>
         <br>
 	<span class="depth-2">
-          [<a href="javascript:;" onclick="toggleDisplay('ACF18');">abstract</a>]
-          [<a href="https://arxiv.org/abs/1808.06056">arXiv</a> (2018)]
-          [<a href="https://doi.org/10.1080/10586458.2021.1980453">journal</a>]          
+          <small>
+            [<a href="javascript:;" class="no-decoration" onclick="toggleDisplay('ACF18');">abstract</a>]
+            [<a href="https://arxiv.org/abs/1808.06056" class="no-decoration">arXiv</a> (2018)]      
+          </small>
         </span>
       </p>
 
@@ -345,13 +363,16 @@
         </span>
         <br>
         <span class="depth-2">
-          <em>Random Matrices: Theory and Applications</em>, vol. 8 no. 2 (2019), pp. 1&ndash;40.
+          <em>
+            <a href="https://doi.org/10.1142/S2010326319500059">Random Matrices: Theory and Applications</a>
+          </em>, vol. 8 no. 2 (2019), pp. 1&ndash;40.
         </span>
         <br>
 	<span class="depth-2">
-          [<a href="javascript:;" onclick="toggleDisplay('CKL18');">abstract</a>]
-          [<a href="https://arxiv.org/abs/1803.08127">arXiv</a> (2018)]
-          [<a href="https://doi.org/10.1142/S2010326319500059">journal</a>]          
+          <small>
+            [<a href="javascript:;" class="no-decoration" onclick="toggleDisplay('CKL18');">abstract</a>]
+            [<a href="https://arxiv.org/abs/1803.08127" class="no-decoration">arXiv</a> (2018)]
+          </small>
         </span>
       </p>
 
@@ -385,13 +406,16 @@
         </span>
         <br>
         <span class="depth-2">
-          <em>The Electronic Journal of Combinatorics</em>, vol. 25 no. 3 (2018), pp. 1&ndash;14.
+          <em>
+            <a href="https://doi.org/10.37236/6516">The Electronic Journal of Combinatorics</a>
+          </em>, vol. 25 no. 3 (2018), pp. 1&ndash;14.
         </span>
         <br>
 	<span class="depth-2">
-          [<a href="javascript:;" onclick="toggleDisplay('ACF16');">abstract</a>]
-          [<a href="https://arxiv.org/abs/1608.04279">arXiv</a> (2016)]
-          [<a href="https://doi.org/10.37236/6516">journal</a>]          
+          <small>  
+            [<a href="javascript:;" class="no-decoration" onclick="toggleDisplay('ACF16');">abstract</a>]
+            [<a href="https://arxiv.org/abs/1608.04279" class="no-decoration">arXiv</a> (2016)]
+          </small>     
         </span>
       </p>
 
